--- a/client/mobile/app.json
+++ b/client/mobile/app.json
@@ -35,6 +35,12 @@
         }
       ],
       [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ],
+      [
         "expo-build-properties",
         {
           "android": {
