update: added login persistence

--- a/client/mobile/app.json
+++ b/client/mobile/app.json
@@ -3,7 +3,6 @@
     "name": "mobile",
     "slug": "mobile",
     "version": "1.0.0",
-
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -47,7 +46,8 @@
             "enableLargeHeap": true
           }
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
