--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -49,7 +49,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-navigation": "^5.0.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "expo-secure-store": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
