--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -50,7 +50,8 @@
     "react-native-webview": "13.12.5",
     "react-navigation": "^5.0.0",
     "zustand": "^5.0.3",
-    "expo-secure-store": "~14.0.1"
+    "expo-secure-store": "~14.0.1",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
