--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -51,7 +51,8 @@
     "react-navigation": "^5.0.0",
     "zustand": "^5.0.3",
     "expo-secure-store": "~14.0.1",
-    "expo-image-picker": "~16.0.6"
+    "expo-image-picker": "~16.0.6",
+    "expo-file-system": "~18.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
