--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -52,7 +52,8 @@
     "zustand": "^5.0.3",
     "expo-secure-store": "~14.0.1",
     "expo-image-picker": "~16.0.6",
-    "expo-file-system": "~18.0.12"
+    "expo-file-system": "~18.0.12",
+    "@react-native-picker/picker": "2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
