--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -16,19 +16,24 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/stack": "^7.2.9",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.3",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.8",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.10",
     "expo-router": "~4.0.20",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
@@ -49,11 +54,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-navigation": "^5.0.0",
-    "zustand": "^5.0.3",
-    "expo-secure-store": "~14.0.1",
-    "expo-image-picker": "~16.0.6",
-    "expo-file-system": "~18.0.12",
-    "@react-native-picker/picker": "2.9.0"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
