--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,6 +9,7 @@ branca==0.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+cloudinary==1.44.0
 contourpy==1.3.1
 cycler==0.12.1
 deprecation==2.1.0
@@ -59,6 +60,7 @@ python-dotenv==1.1.0
 pytz==2025.1
 realtime==2.4.2
 requests==2.32.3
+scipy==1.15.2
 shapely==2.0.7
 six==1.17.0
 sniffio==1.3.1
