update: fixed image problem while adding obstacles

--- a/client/mobile/app.json
+++ b/client/mobile/app.json
@@ -9,13 +9,19 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.yourapp.mobile", // Replace with your actual bundle identifier
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "We need access to your location for mapping features.",
+        "NSLocationAlwaysUsageDescription": "We need access to your location for mapping features even when the app is in the background."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": ["ACCESS_FINE_LOCATION", "ACCESS_COARSE_LOCATION"]
     },
     "web": {
       "bundler": "metro",
